--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <link rel="stylesheet" href="styles.css">
     <title>Hello World!</title>
   </head>
-  <body>
+  <body >
     <h1>Hello World!</h1>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+
+    <div id="drag-1" class="draggable">
+      <p> фишка1 </p>
+    </div>
+    <div id="drag-2" class="draggable">
+      <p> фишка2</p>
+    </div>
+
 
     <script src="./renderer.js"></script>
   </body>
