option to add multiple tokens

--- a/web/index.html
+++ b/web/index.html
@@ -13,12 +13,10 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
-    <div id="drag-1" class="draggable">
+    <div  class="drag draggable new">
       <p> фишка1 </p>
     </div>
-    <div id="drag-2" class="draggable">
-      <p> фишка2</p>
-    </div>
+    
 
 
     <script src="./renderer.js"></script>
